# archons-ai.github.io

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
assets/javascripts/: bundle.1e8ae164.min.js  bundle.bd41221c.min.js
community/: index.html
docs/: community.md  ethics.md  index.md  jailbreak.md  license.md  testing.md
ethics/: index.html
jailbreak/: index.html
license/: index.html
overrides/: home.html  main.html
public/stylesheets/: extra.css
public/testing/: index.html
search/: search_index.json
testing/: index.html
